<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back_2"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:background="@drawable/back"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:gravity="center_horizontal"
                android:orientation="horizontal" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/textViewRoomTemperature"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="20%"
                        android:textColor="#FFFFFF"
                        android:textSize="37sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="[ 室温 ]"
                        android:textColor="#FFFFFF"
                        android:textSize="15sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="25dp"
                    android:background="#999999"
                    android:orientation="vertical" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/textViewRoomHumidity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="20%"
                        android:textColor="#FFFFFF"
                        android:textSize="37sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="[ 温度 ]"
                        android:textColor="#FFFFFF"
                        android:textSize="15sp" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/textViewHotel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:gravity="center"
                android:text="fdasdfsadfsad"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/t_back"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textViewCityTemperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="sssssss"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:orientation="vertical"
            android:paddingTop="10dp" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/textViewLamp1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lable_lamp_a" />

                    <ToggleButton
                        android:id="@+id/buttonLamp1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/select_button_lamp_a"
                        android:textOff=""
                        android:textOn="" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/textViewLamp2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lable_lamp_b" />

                    <ToggleButton
                        android:id="@+id/buttonLamp2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" 
                        android:background="@drawable/select_button_lamp_b"
                        android:textOff=""
                        android:textOn=""/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/textViewLamp3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lable_lamp_c" />

                    <ToggleButton
                        android:id="@+id/buttonLamp3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" 
                        android:background="@drawable/select_button_lamp_c"
                        android:textOff=""
                        android:textOn=""/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/textViewLamp4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lable_lamp_d" />

                    <ToggleButton
                        android:id="@+id/buttonLamp4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/select_button_lamp_d"
                        android:textOff=""
                        android:textOn="" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/textViewTV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lable_tv" />

                    <ToggleButton
                        android:id="@+id/buttonTV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" 
                        android:background="@drawable/select_button_tv"
                        android:textOff=""
                        android:textOn=""/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/textViewAircondition"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lable_air" />

                    <ToggleButton
                        android:id="@+id/buttonAircondition"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/select_button_air" 
                        android:textOff=""
                        android:textOn=""/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>